# lmelp-pap

./: .cruft.json  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  package.json  pyproject.toml
.claude/commands/: .gitkeep  fix-issue.md  stocke-memoire.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.devcontainer/resources/: .p10k.zsh
.devcontainer/scripts/: update_mkdocs_repo_url.sh
.github/workflows/: ci.yml  docs.yml
data/rapport_deepresearch/: compass_artifact_wf-0564afca-e54c-43f8-b569-abf8b79a4975_text_markdown.md
docs/: .nav.yml  .pages  bonnes_pratiques.md  index.md
docs/cheatsheets/: claude.md  devcontainer.md  docker.md  github.md  latex.md  mkdocs.md  screen.md  uv.md  vscode.md
docs/claude/memory/: README.md
docs/dev/: .nav.yml  .pages  README.md  documentation_tools.md  pyfoundry.md
docs/javascripts/: toc-collapse.js
docs/overrides.css/: custom-table-header.css  toc-collapse.css
docs/user/: .nav.yml  .pages  README.md  gemini.md
